functional test OK
