# user/controller/event.go
@@ -1,31 +1,52 @@
 package controller
 
 import (
-	"fmt"
+	"context"
 	"github.com/labstack/echo/v4"
+	"github.com/leon123858/tsmc-meal-order/user/model"
 	"github.com/leon123858/tsmc-meal-order/user/service"
 	"net/http"
 )
 
 // SyncEventMessage 同步 event
-// @Summary 同步 event
-// @Description 同步 event, 由 infra handle 傳入 cloud run, 若非 200 回傳, 會觸發重試
-// @Tags event
-// @Accept json
-// @Produce json
-// @Param input body service.PubSubMessage true "body"
-// @Success 200 {object} string "success"
-// @Router /sync [post]
+//
+//	@Summary		同步 event
+//	@Description	同步 event, 由 infra handle 傳入 cloud run, 若非 200 回傳, 會觸發重試
+//	@Tags			event
+//	@Accept			json
+//	@Produce		json
+//	@Param			input	body		service.PubSubMessage	true	"body"
+//	@Success		200		{object}	string					"success"
+//	@Router			/sync [post]
 func SyncEventMessage(c echo.Context) error {
 	req := new(service.PubSubMessage)
 	if err := c.Bind(req); err != nil {
 		return c.String(http.StatusBadRequest, err.Error())
 	}
-	event := make(map[string]interface{})
-	if err := req.BindPubSubMessageData(&event); err != nil {
-		return c.String(http.StatusBadRequest, err.Error())
+	switch req.Subscription {
+	case "user-create-event":
+		event := new(model.UserCreateEvent)
+		if err := req.BindPubSubMessageData(event); err != nil {
+			//fmt.Printf("%+v\n", event)
+			return c.String(http.StatusBadRequest, err.Error())
+		}
+		// create user in firestore(db)
+		_, err := service.DBClient.Collection("user").Doc(event.Data.UID).Set(context.Background(), model.UserInformation{
+			UserCoreInformation: model.UserCoreInformation{
+				UID:   event.Data.UID,
+				Email: event.Data.Email,
+			},
+			UserGeneralInformation: model.UserGeneralInformation{
+				Name:  "",
+				Place: "",
+			},
+			UserType: event.Data.UserType,
+		})
+		if err != nil {
+			return c.JSON(http.StatusBadRequest, model.ErrorResponse(err.Error()))
+		}
+	default:
+		return c.String(http.StatusBadRequest, "invalid subscription id")
 	}
-	// print event
-	fmt.Printf("%+v\n", event)
 	return c.String(http.StatusOK, "success")
 }
